--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "challenge-front-end-traction",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://donelli.github.io/challenge-front-end-traction",
   "engines": {
     "node": "16.14.0"
   },
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
